--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=social-media
+server.port=9999
+# Cau hinh MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/socialMedia
+spring.datasource.username=root
+spring.datasource.password=12345abc
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
