--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+cloudinary.cloud-name=dzow04q4h
+cloudinary.api-key=337221829521575
+cloudinary.api-secret=p46g6Q1c-q5HB83P1bEMTjpqMis
