config: sonarqube for scan quality code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,9 @@ cloudinary.folder=social_media/
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=15MB
+
+sonar.projectName=SpringBoot App
+sonar.host.url=http://localhost:9000
+sonar.language=java
+sonar.sourceEncoding=UTF-8
+sonar.java.binaries=target/classes
