feat: API send message with FILE type

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+cloudinary.cloud-name=doycy5gbl
+cloudinary.api-key=142539132518888
+cloudinary.api-secret=H-nn9ZrUNVyE4K3iDZWBQ7dXJKo
+cloudinary.folder=social_media/
