--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=social-media
 server.port=9999
+server.error.include-message=always
 # Cau hinh MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/socialMedia
 spring.datasource.username=root
