--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.servlet.context-path=/api
 # Cau hinh MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/socialMedia
 spring.datasource.username=root
-spring.datasource.password=12345abc
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
