--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=social-media
 server.port=9999
 server.error.include-message=always
 server.servlet.context-path=/api
-
+spring.config.import=optional:classpath:secret.properties
 # Cau hinh MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/socialMedia
 spring.datasource.username=root
