--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=9999
 server.error.include-message=always
 server.servlet.context-path=/api
 spring.config.import=optional:classpath:secret.properties
+
 # Cau hinh MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/socialMedia
 spring.datasource.username=root
@@ -28,3 +29,11 @@ sonar.sourceEncoding=UTF-8
 sonar.java.binaries=target/classes
 
 jwt.secret=3q2+7wA3kD93C1pM9YzX6l8eRQvKXbR9F5JsdBq6UPI=
+openai.api.key = dfjalsdkjflasdjflakdfjla;sdkjf
+
+gemini.api.key=AIzaSyA5iAj-OY0uuivqhCWHvarJsALhmO9QPR8
+gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=AIzaSyA5iAj-OY0uuivqhCWHvarJsALhmO9QPR8
+
+
+
+
