--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.config.import=optional:classpath:secret.properties
 # Cau hinh MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/socialMedia
 spring.datasource.username=root
-spring.datasource.password=12345abc
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -31,7 +31,7 @@ sonar.java.binaries=target/classes
 jwt.secret=3q2+7wA3kD93C1pM9YzX6l8eRQvKXbR9F5JsdBq6UPI=
 
 gemini.api.key=AIzaSyA5iAj-OY0uuivqhCWHvarJsALhmO9QPR8
-gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=AIzaSyA5iAj-OY0uuivqhCWHvarJsALhmO9QPR8
+gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=AIzaSyBPUMhnvfDP00TxzcYRh2kebnqNFCqBnRM
 
 
 
