them refresh token co thoi han 1 ngay

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,3 +49,7 @@ spring.mail.password=ohgx uhlo nbii rlle
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# jwt
+jwt.valid-duration = 3600
+jwt.refreshable-duration = 86400
